# hardware_sensor_data_cli

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
